--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
 		"go": "tsc && node scratch-lyrics-generator.js"
 	},
 	"dependencies": {
-		"@types/node": "^22.15.3",
+		"@types/node": ">=22.15.3",
 		"@xmldom/xmldom": "^0.9.8",
 		"clrc": "^3.1.4",
 		"jszip": "^3.10.1",
 		"rimraf": "^6.0.1",
+		"scratch-uid": "^3.0.0",
 		"typescript": "^5.8.3"
 	}
 }
