--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
 		"jszip": "^3.10.1",
 		"rimraf": "^6.0.1",
 		"scratch-uid": "^3.0.0",
-		"typescript": "^5.8.3"
+		"typescript": ">=5.8.3"
 	}
 }
